# rag-filing-analyst

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  requirements.txt
.github/workflows/: ci-cd.yml
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  pyproject.toml  requirements.txt
backend/scripts/: ask.py  index_sec_dataset.py
backend/src/api/: main.py  schemas.py
backend/src/rag_core/: chunking.py  config.py  embeddings.py  llm.py  vectorstore.py
backend/tests/: conftest.py  test_api.py  test_chunking.py  test_schemas.py
docs/: API.md  DEVELOPMENT.md  README.md
frontend/: .env.example  .gitignore  .prettierignore  .prettierrc.json  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: CitationCard.tsx  Header.tsx  QueryForm.tsx  ResultsDisplay.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  SearchInput.tsx
frontend/src/hooks/: useRagQuery.ts
frontend/src/services/: api.ts
frontend/src/types/: api.ts
frontend/src/utils/: index.ts
scripts/: index_sec_dataset.py
src/api/: main.py  schemas.py
src/rag_core/: embeddings.py  llm.py  vectorstore.py
